# srcomp

./: .gitignore  Makefile  README.md  bitm.c  bitm.h  configure.ac  dynarray.c  dynarray.h  eg_gen.py  mtf.c  mtf.h  split2b.c  split2b.h  srcomp.c  test_bitm.c  test_bitm.h  tests.c  wseparator.c  wseparator.h
src/: Makefile  Makefile.am  bitm.c  bitm.h  doxygen.conf  fast_eg.h  split2b.c  srcomp.c  srz.c  srz.h  tests.c  wseparator.c
tests/: Makefile.am  test_bitm.h
